# photonic-ring

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  project.godot
.github/workflows/: codeql.yml
addons/photonic_ring/: plugin.cfg  plugin.gd  plugin.gd.uid
addons/photonic_ring/ui/: texture_generator_panel.gd  texture_generator_panel.gd.uid  texture_generator_panel.tscn
docs/: DEVELOPMENT.md  EXAMPLES.md  QUICKSTART_VI.md  TESTING.md
rust/: .gdignore  Cargo.toml
rust/src/: channel_packer.rs  height_map.rs  lib.rs  normal_map.rs  roughness_map.rs  texture_generator.rs
