[package]
name = "photonic-ring"
version = "0.1.0"
edition = "2021"
authors = ["Duy Phan (duyphan0503) <phanbaoduy0503@gmail.com>"]
description = "AI Texture Generator for Godot - Automatically generates Height, Normal, and Roughness maps"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.1"
image = "0.24"
imageproc = "0.23"
nalgebra = "0.32"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
