[package]
name = "photonic-ring"
version = "0.1.1"
edition = "2021"
authors = ["Duy Phan (duyphan0503) <phanbaoduy0503@gmail.com>"]
description = "AI Texture Generator for Godot - Automatically generates Height, Normal, and Roughness maps"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = "0.1"
image = "0.24"
imageproc = "0.23"
nalgebra = "0.32"
rayon = "1.8"
texpresso = "2.0"
ddsfile = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
